# switchboard

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  MANIFEST.in  QWEN.md  README.md  framework.sh  index.html  opencode.json  package-lock.json  package.json  pyproject.toml  run.sh  start-switchboard.sh  tsconfig.test.json  vite.config.ts
.gemini/: settings.json
.opencode/agents/: switchboard.md
.qwen/: settings.json
documentation/: control-center-setup.md  node-install-guide.md  runtime-monitoring.md  switchboard-april29-gap-audit.md  switchboard-design-principles.md  switchboard-doc-structure-rules.md  switchboard-roadmap.md
scripts/: deploy.sh  dev.sh
src/: App.tsx
src/api/: client.ts
src/components/: AccordionSection.tsx  CompaniesPanel.tsx  ConfirmationModal.tsx  DownloadPanel.tsx  GitHubBackupPanel.tsx  InfoDropdown.tsx  ProjectOnboardingPanel.tsx  ProjectsPanel.tsx  PullBundlePanel.tsx  RepoSummary.tsx  RunStatus.tsx  SecretPathGuard.tsx  ServerCRUDPanel.tsx  ServiceCard.tsx  StatusBadge.tsx  TaskLedgerPanel.tsx  WorkspaceSwitcher.tsx
src/data/: fallback.ts  logs-index.json  repo-inventory.json  run-history.json  server-registry.json  (+2 more)
switchboard/: __init__.py  api.py  cli.py  collectors.py  config.py  defaults.py  main.py  manager.manifest.json  manifests.py  models.py  node.manifest.json  node.py  node_api.py  node_runtime.py  storage.py
tests/: api-contract.test.ts  snapshot-shape.test.ts  status-codes.test.ts
tests_backend/: test_backend_regressions.py  test_node_mode.py  test_runtime_and_node_sync.py
(+36 files in other folders)
