[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "switchboard"
version = "0.1.2"
description = "Framework-first control center for project workspaces, server pulls, and dashboard snapshots."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "orjson>=3.10,<4.0",
  "paramiko>=3.5,<4.0",
  "pathspec>=0.12,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-dotenv>=1.0,<2.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
switchboard = "switchboard.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["switchboard*"]

[tool.setuptools.package-data]
switchboard = ["static/app/**/*"]
